fix: fix broken styles

--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ body {
 
 .container {
     width: 920px;
-    height: 1130px;
+    height: 1230px;
     margin: 0 auto;
     box-shadow: 0px 0px 15px 3px rgba(125,125,125,0.5);
 }
@@ -149,7 +149,8 @@ main {
 }    
 
 .main_content_container p, 
-.main_content_container span {
+.main_content_container span, 
+.main_content_container h3 {
     margin: 30px 40px;
 }  
  
